Added test3, removed useless files

--- a/linear_app/templates/about.html
+++ b/linear_app/templates/about.html
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-  <p>Pour plus d'information, contactez votre professeur de SES</p>
+  <p>Pour plus d'information, contactez votre professeur de SES : boris.ottaviano@ac-versailles.fr</p>
 
 {% endblock %}
