--- a/linear_app/templates/index.html
+++ b/linear_app/templates/index.html
@@ -2,11 +2,15 @@
 
 {% block body %}
 
-<p> Les tests disponibles </p>
+
+<p>Après avoir visionné les vidéos de cours, complétez la synthèse correspondante.<br>
+<span style="color:red;">Vos réponses sont enregistrées pour évaluation : renseignez bien vos prénom, nom et groupe.</span>
+</p>
 
 <div class="list-group">
-  <a href="/test1" class="list-group-item list-group-item-action">Synthèse : II.A. Le vote comme un acte individuel</a>
-  <a href="/test2" class="list-group-item list-group-item-action">Synthèse : II. B. Le vote comme acte collectif</a>
+  <a href="/test1" class="list-group-item list-group-item-action">Synthèse II.A. Le vote comme un acte individuel</a>
+  <a href="/test2" class="list-group-item list-group-item-action">Synthèse II.B. Le vote comme acte collectif</a>
+  <a href="/test3" class="list-group-item list-group-item-action">Synthèse II.C. Comment expliquer la volatilité du vote ?</a>
 </div>
 
 {% endblock %}
