--- a/linear_app/templates/layout.html
+++ b/linear_app/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Test SES</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style.css') }}">
   </head>
   <body>
     {% include 'includes/_navbar.html' %}
