--- a/linear_app/templates/includes/_navbar.html
+++ b/linear_app/templates/includes/_navbar.html
@@ -5,7 +5,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/">Acceuil</a></li>
+            <li><a href="/">Accueil</a></li>
             <li><a href="/about">Contact</a></li>
           </ul>
 
