Upload 2eme cours et images

--- a/cours/templates/index.html
+++ b/cours/templates/index.html
@@ -3,6 +3,7 @@
 {% block body %}
 
 <div class="list-group">
+  <a href="/cours_ch6" class="list-group-item list-group-item-action">Chapitre 6</a>
   <a href="/cours_ch7" class="list-group-item list-group-item-action">Chapitre 7</a>
 </div>
 
