--- a/cours/static/CSS_ch7.css
+++ b/cours/static/CSS_ch7.css
@@ -100,6 +100,15 @@ section
     flex-direction: column;
     padding: 10px;
 }
+article
+{
+    text-align: justify;
+    margin-top: 20px;
+	margin-bottom: 5px;
+	margin-right: 10px;
+	margin-left: 10px;
+    padding: 20px;
+}
 .tI
 {
 	margin-top: 20px;
@@ -172,4 +181,20 @@ section
  	margin-bottom: 20px;
     margin-right: 10px;
     margin-left: 20px
+}
+.synthèse
+{
+    border: 1px dashed black;
+    padding: 20px;
+    margin-left: 0px
+    margin-bottom: 10px;
+    background-color: #b8c9b3;
+    box-shadow: 0px 4px 10px #1c1a19;
+}
+.programme
+{
+    border: 1px dashed black;
+    padding: 20px;
+    margin-left: 0px
+    margin-bottom: 10px;
 }
