--- a/cours/static/CSS_ch7.css
+++ b/cours/static/CSS_ch7.css
@@ -3,6 +3,10 @@ body
     background-image: url("https://get.pxhere.com/photo/horizon-black-and-white-fog-skyline-photography-morning-building-city-skyscraper-urban-cityscape-san-francisco-line-haze-monochrome-monochrome-photography-atmospheric-phenomenon-human-settlement-atmosphere-of-earth-1392519.jpg");
     background-attachment: fixed;
     font-family: "Verdana"; Verdana;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
 }
 p
 {
@@ -31,6 +35,12 @@ ul
     float: right;
     max-width: 350px;
 }
+.imageflottante3
+{
+    float: left;
+    max-width: 800px;
+    margin: 20px
+}
 .imagevideo
 {
     max-width: 300px;
@@ -50,6 +60,14 @@ ul
     margin-top: 0px;
   	margin-bottom: 10px;
   	margin-left: 0px;
+}
+.imagedoc
+{
+    max-width: 700px;
+    margin-top: 10px;
+  	margin-bottom: 10px;
+  	margin-left: 20px;
+  	border: 1px black solid;
 }
 .imagelogo
 {
@@ -72,8 +90,9 @@ img
   	margin-bottom: 20px;
   	margin-left: 20px;
 }
-nav
+.navo
 {
+	clear: both;
 	display: flex;
 	flex-direction: column;
  	float: left;
@@ -131,6 +150,7 @@ article
 	margin-right: 0px;
 	margin-left: 10px;
 	font-style: italic;
+	color: black;
 }
 .ta
 {
@@ -138,11 +158,12 @@ article
 	margin-bottom: 5px;
 	margin-right: 0px;
 	margin-left: 15px;
+	color: black;
 }
 .définition
 {
     border: 1px solid black;
-    padding: 10px;
+    padding: 20px;
     margin-left: 0px
     margin-bottom: 10px;
     background-color: #D8BFD8;
@@ -151,7 +172,7 @@ article
 .rappel
 {
     border: 1px solid black;
-    padding: 10px;
+    padding: 20px;
     margin-left: 0px
     margin-bottom: 10px;
     background-color: #F5F5DC;
@@ -159,8 +180,9 @@ article
 }
 .document 
 {
-	border: 1px dashed black;
-	padding: 10px;
+	background-color: #FFFFFF;
+ 	border: 1px dashed black;
+	padding: 20px;
 }
 .situation
 {
@@ -198,3 +220,114 @@ article
     margin-left: 0px
     margin-bottom: 10px;
 }
+.encadré
+{
+	border: 1px solid black;
+    padding: 20px;
+    margin-left: 0px
+    margin-bottom: 10px;
+    background-color: #CECECE;
+    box-shadow: 0px 4px 10px #1c1a19;
+}
+.table
+{
+    border-collapse: collapse; /* Les bordures du tableau seront collées (plus joli) */
+}
+.td
+{
+    border: 1px solid black;
+    text-align: center; /* auront une bordure de 1px */
+}
+.th /* Toutes les cellules des tableaux... */
+{
+    border: 1px solid black; /* auront une bordure de 1px */
+}
+table
+{
+	margin: 20px;
+	margin-top: 0px;
+	margin-bottom: : 0px;
+}
+
+
+
+nav.menu {
+margin: 0px;
+}
+
+ul.menu {
+    height: 47px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  box-shadow:  0px 5px 8px 0px rgba(0,0,0,0.2);
+
+
+}
+
+li.menu {
+  float: left;
+  display: inline;
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+li.menu a.menu, .dropbtn {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 26px;
+  text-decoration: none;
+  border-right: 1px solid #bbb;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: #111;
+}
+
+/* Style The Dropdown Button */
+.dropbtn {
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-right: 1px solid #bbb;
+}
+
+/* The container <div> - needed to position the dropdown content */
+li.dropdown {
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #696969;
+  min-width: fit-content;
+  box-shadow:  0px 5px 8px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: white;
+  padding: 15px 15px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Change color of dropdown links on hover */
+
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
