--- a/cours/templates/includes/_navbar.html
+++ b/cours/templates/includes/_navbar.html
@@ -1,16 +1,19 @@
-<nav class="navbar navbar-default bg-info">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand">Test SES</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Accueil</a></li>
-            <li><a href="/about">Contact</a></li>
-          </ul>
+<nav class="menu">
+    <ul class="menu">
+        <li class="menu" style="background-color:#173656;font-size:125%" ><a class="menu" href="/">Test SES</a></li>
+        <li class="menu"><a class="menu" href="/">Accueil</a></li>
+        <li class="menu dropdown"> <a class="dropbtn">Cours Seconde</a>
+                                <div class="dropdown-content">
+                                  <a href="#">Chapitre 3 (bientôt)</a>
+                                </div>
+        </li>
+         <li class="menu dropdown"> <a href="javascript:void(0)" class="dropbtn">Cours Première</a>
+                                <div class="dropdown-content">
+                                  <a href="/cours_ch6">Chapitre 6</a>
+                                  <a href="/cours_ch7">Chapitre 7</a>
+                                </div>
+        </li>
 
-
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+        <li class="menu" style="float:right"><a class="menu" href="/about">Contact</a></li>
+    </ul>
+</nav>
