--- a/cours/templates/index.html
+++ b/cours/templates/index.html
@@ -2,9 +2,21 @@
 
 {% block body %}
 
-<div class="list-group">
-  <a href="/cours_ch6" class="list-group-item list-group-item-action">Chapitre 6</a>
-  <a href="/cours_ch7" class="list-group-item list-group-item-action">Chapitre 7</a>
+<div style="margin:15px;">
+       <strong> Cours de Seconde</strong>
+<ul style="list-style: none;">
+       <li><a href="#">Chapitre 3 (bientôt)</a></li>
+</ul>
 </div>
+
+<div style="margin:15px;list-style: none;">
+       <strong> Cours de Première</strong>
+<ul style="list-style: none;">
+       <li><a href="/cours_ch6">Chapitre 6 </a></li>
+       <li><a href="/cours_ch7">Chapitre 7</a></li>
+</ul>
+
+</div>
+
 
 {% endblock %}
