--- a/cours/templates/layout.html
+++ b/cours/templates/layout.html
@@ -3,21 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Test SES</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='CSS_ch7.css') }}">
+{% block navbar %}
+  {% include 'includes/_navbar.html' %}
+  {% include 'includes/_messages.html' %}
+{% endblock %}
 
   </head>
-  <body>
-    {% include 'includes/_navbar.html' %}
-    <div class="container">
-      {% include 'includes/_messages.html' %}
-      {% block body %}{% endblock %}
-    </div>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="//cdn.ckeditor.com/4.6.2/basic/ckeditor.js"></script>
-    <script type="text/javascript">
-      CKEDITOR.replace('editor')
-    </script>
+
+
+  <body>
+
+
+      {% block body %}{% endblock %}
+
   </body>
 </html>
