Ajout Chapitre 3 Seconde

--- a/cours/templates/index.html
+++ b/cours/templates/index.html
@@ -5,7 +5,7 @@
 <div style="margin:15px;">
        <strong> Cours de Seconde</strong>
 <ul style="list-style: none;">
-       <li><a href="#">Chapitre 3 (bientôt)</a></li>
+       <li><a href="/seconde_cours_ch3">Chapitre 3</a></li>
 </ul>
 </div>
 
