--- a/cours/templates/includes/_navbar.html
+++ b/cours/templates/includes/_navbar.html
@@ -4,7 +4,7 @@
         <li class="menu"><a class="menu" href="/">Accueil</a></li>
         <li class="menu dropdown"> <a class="dropbtn">Cours Seconde</a>
                                 <div class="dropdown-content">
-                                  <a href="#">Chapitre 3 (bientôt)</a>
+                                  <a href="/seconde_cours_ch3">Chapitre 3</a>
                                 </div>
         </li>
          <li class="menu dropdown"> <a href="javascript:void(0)" class="dropbtn">Cours Première</a>
